<resources>
    <string name="app_name">ContactMe</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_events">Events</string>
    <string name="title_calendar">Calendar</string>
    <string name="add_contact">Add Contact</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="method">Contact Method</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_event">Add Event</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="remove_event">Remove Event</string>
    <string name="weeks">Weeks to Contact</string>
    <string name="days">Days to Contact</string>
    <string name="info">Info</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit_event">Edit Event</string>
    <string name="submit">Submit</string>
    <string name="who_did_you_contact_since_the_last_time_you_opened_the_app">Who did you contact since the last time you opened the app?</string>
</resources>