<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addContact.AddContactFragment"
    android:id="@+id/addContactConstraintLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:ignore="MissingConstraints,VisualLintButtonSize"
            android:id="@+id/back_to_contacts">
        </Button>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/name"
            tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextTextPersonMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/method"
            tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextWeeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp"
            android:hint="@string/weeks"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp"
            android:hint="@string/days"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/make_contact"
            android:text="@string/add_contact"
            tools:ignore="VisualLintButtonSize"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>