<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editContact.EditContactFragment"
    android:id="@+id/myConstraintLayout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/backFromEdit"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editList"/>
            <EditText
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/name"
                tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/contactMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/method"
                tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/contactPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/contactWeeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                android:hint="@string/weeks"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/contactDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                android:hint="@string/days"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_contact"
                android:text="@string/edit_contact"
                tools:ignore="VisualLintButtonSize"/>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>