<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_landing_page">

    <fragment
        android:id="@+id/navigation_landing_page"
        android:name="com.example.contactme.ui.landingPage.LandingPageFragment"
        tools:layout="@layout/fragment_landing_page"/>
        

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.contactme.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.contactme.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.contactme.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>