<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editEvent.EditEventFragment"
    android:id="@+id/editEventConstraintLayout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="96dp"
        android:clipToPadding="false"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/back_from_edit_event"
                tools:ignore="VisualLintButtonSize"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_events_list"/>

            <EditText
                android:id="@+id/editEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/name"
                tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />
            <EditText
                android:id="@+id/editEventInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/info"
                tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

            <DatePicker
                android:id="@+id/editDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="true" />

            <TimePicker
                android:id="@+id/editTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/editEventRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_event"
                tools:ignore="VisualLintButtonSize"
                android:id="@+id/edit_event"/>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>